--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html>
+	<body style="background-color:lightblue">
 
+	<head>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="interface.css" />
+		<h1 style="text-align:center">Walroos Clicker v0.1</h1>
+	</head>
+
+	<body>
+		<h1>Click on the button below to generate Walroos dollars.</h1>
+		<p>Walroos makes paper using paper mache. Walroos sells paper for a living so she can afford to eat lots of chocolate and ice cream. Walroos lives in Walroosland, where the currency is known as "Walroos Dollars." Every click will earn you 1 Walroos Dollar.</p>
+	
+		<button style="font-size:200%;margin-left:auto;margin-right:auto;display:block;margin-top:3%;margin-bottom:0%" onClick="paperClick(1)">Paper!</button>
+		<br />
+		Walroos Dollars: <span id="paper">0</span>
+		<br />
+		<br />
+		<br />
+		<br />
+		<p>Buy 1 Icecream with 10 Walroos Dollars!
+		<button style="font-size:200%;margin-left:auto;margin-right:auto;display:block;margin-top:0%;margin-bottom:0%" onClick="icecreamClick(1)">Ice Cream!</button>
+		<br />
+		Icecream: <span id="icecream">0</span>
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+		Obtain 10 icereams to win!
+		<br />
+		<br />
+		<br />
+		<span id="winmessage">YOU WIN! WALROOSA!!!!!!!!</span>
+		
+		
+		<script type="text/javascript" src="main.js"></script>
+	</body>
+
+</html>
